[gd_scene load_steps=8 format=3 uid="uid://clbg6e8du7yx8"]

[ext_resource type="Script" path="res://script/cards/green/ap.gd" id="1_ifejd"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="2_nb6uj"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="3_pq3bm"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_ilfn4"]
[ext_resource type="Texture2D" uid="uid://bt878yqgrklbu" path="res://img/piece/standerd/green.png" id="5_e14gy"]
[ext_resource type="PackedScene" uid="uid://c83kbyxqmarvi" path="res://scenes/component/score_component.tscn" id="6_2b15a"]
[ext_resource type="PackedScene" uid="uid://d2lqpgvgq4oh3" path="res://scenes/component/buff_component.tscn" id="7_i2hhq"]

[node name="GreenAP" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component", "score_component", "buff_component")]
script = ExtResource("1_ifejd")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")
score_component = NodePath("ScoreComponent")
buff_component = NodePath("BuffComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_nb6uj")]
unique_name_in_owner = true
DEAFULT_MAX_HEALTH = 3

[node name="AttackComponent" parent="." instance=ExtResource("3_pq3bm")]
unique_name_in_owner = true
DEFAULT_ATK = 2
ATK_PATTERN = 5

[node name="OutfitComponent" parent="." instance=ExtResource("4_ilfn4")]
unique_name_in_owner = true
icon_texture = ExtResource("5_e14gy")
frame = 2

[node name="ScoreComponent" parent="." instance=ExtResource("6_2b15a")]
unique_name_in_owner = true

[node name="BuffComponent" parent="." instance=ExtResource("7_i2hhq")]
unique_name_in_owner = true

[connection signal="on_hit" from="AttackComponent" to="." method="_on_attack_component_on_hit"]
